# jitsi-reservation-api

./: CMakeLists.txt  README.rst  api.py  main.py  manual.md  openapi.yaml  requirements.txt
data/: api-config.ini  jitsi-reservation-api.service  jitsi-reservation-api.socket  schema.sql
endpoints/: __init__.py  meetings.py
orm/: DataModel.py  __init__.py  meetings.py
